--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <h1>Rou</h1>
-    <section class="cash-chips">choose a chip
+
+
+
+input
+
+    <section id="cash-chips">choose a chip
     <button>5</button>
     <button>10</button>
-    <button>15</button>
+   
 
 </section>
 
-<section class="odd/even-bets">odd/even bets
+<section id="odd/even-bets">odd/even bets
     <button> odd</button>
     <button>even</button>
 
 </section>
-
+<!--
 <section class="color-bets"> color  bets
     <button>red</button>
     <button>black</button>
@@ -55,6 +60,7 @@
     <button>28,29,30,31,32,33</button>
     <button>31,32,33,34,35,36</button>
 </section>
+-->
 </head>
 <body>
     
