Mvp In progress, ideas in motion

--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 
 
 
-input
 
-    <section id="cash-chips">choose a chip
-    <button>5</button>
-    <button>10</button>
+
+    <section id="cash-chips">1.  choose a chip
+    <button>$5</button>
+    <button>$10</button>
+    <button>$15</button>
    
 
 </section>
-
-<section id="odd/even-bets">odd/even bets
+<section id="bets-to-be-made">
+<section class ="bet" id="odd/even-bets">2.  place a bet odd/even bets
     <button> odd</button>
     <button>even</button>
 
 </section>
+
+
+<section class="high/low-bets">high/ low range
+<button> 1-18</button>
+<button>19-36</button>
+</section>
+
 <!--
 <section class="color-bets"> color  bets
     <button>red</button>
     <button>black</button>
 </section>
 
-<section class="high/low-bets">high/ low range
-<button> 1-18</button>
-<button>19-36</button>
-</section>
 
 <section class="column-bets"> column bets
 <button>TOP</button>
@@ -61,6 +65,8 @@ input
     <button>31,32,33,34,35,36</button>
 </section>
 -->
+</section>
+<button id="spin-wheel">PLAY</button>
 </head>
 <body>
     
