Added additional wager buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <button>black</button>
 </section>
 
-<!--
+
 
 <section class="column-bets"> column bets
 <button>TOP</button>
@@ -52,6 +52,7 @@
 </section>
 
 <section class="6line-bets">
+    <button>0,1,2,3</button>
     <button>1,2,3,4,5,6</button>
     <button>4,5,6,7,8,9</button>
     <button>7,8,9,10,11,12</button>
@@ -63,7 +64,9 @@
     <button>25,26,27,28,29,30</button>
     <button>28,29,30,31,32,33</button>
     <button>31,32,33,34,35,36</button>
-</section>
+</section><!--
+
+
 -->
 </section>
 <button id="spin-wheel">PLAY</button>
@@ -72,3 +75,4 @@
     
 </body>
 </html>
+
