Corner bets added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,59 @@
     <button>25,26,27,28,29,30</button>
     <button>28,29,30,31,32,33</button>
     <button>31,32,33,34,35,36</button>
-</section><!--
+</section>
+
+<section class="street-bets">
+<button>STREET_1</button>
+<button>STREET_4</button>
+<button>STREET_7</button>
+<button>STREET_10</button>
+<button>STREET_13</button>
+<button>STREET_16</button>
+<button>STREET_19</button>
+<button>STREET_22</button>
+<button>STREET_25</button>
+<button>STREET_28</button>
+<button>STREET_31</button>
+<button>STREET_34</button>
+
+</section>
+
+
+<section class="corner-bets">
+
+
+
+
+<button>CORNER1</button>
+<button>CORNER2</button>
+<button>CORNER4</button>
+<button>CORNER5</button>
+<button>CORNER7</button>
+<button>CORNER8</button>
+<button>CORNER10</button>
+<button>CORNER11</button>
+<button>CORNER13</button>
+<button>CORNER14</button>
+<button>CORNER16</button>
+<button>CORNER17</button>
+<button>CORNER19</button>
+<button>CORNER20</button>
+<button>CORNER22</button>
+<button>CORNER23</button>
+<button>CORNER25</button>
+<button>CORNER26</button>
+<button>CORNER28</button>
+<button>CORNER29</button>
+<button>CORNER31</button>
+<button>CORNER32</button>
+
+
+
+    
+</section>
+
+<!--
 
 
 -->
