--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Roulette</title>
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <h1>Rou</h1>
+    <h1>Roulette</h1>
 
 
 
@@ -118,65 +118,70 @@
 
 
 <section class="split-bets">
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
-<button>split</button>
+<button>split01</button>
+<button>split02</button>
+<button>split03</button>
+<button>split1_4</button>
+<button>split2_5</button>
+<button>split3_6</button>
+<button>split4_7</button>
+<button>split5_8</button>
+<button>split6_9</button>
+<button>split7_10</button>
+<button>split8_11</button>
+<button>split9_12</button>
+<button>split10_13</button>
+<button>split11_14</button>
+<button>split12_15</button>
+<button>split13_16</button>
+<button>split14_17</button>
+<button>split15_18</button>
+<button>split16_19</button>
+<button>split17_20</button>
+<button>split18_21</button>
+<button>split19_22</button>
+<button>split20_23</button>
+<button>split21_24</button>
+<button>split22_25</button>
+<button>split23_26</button>
+<button>split24_27</button>
+<button>split25_28</button>
+<button>split26_29</button>
+<button>split27_30</button>
+<button>split28_31</button>
+<button>split29_32</button>
+<button>split30_33</button>
+<button>split31_34</button>
+<button>split32_35</button>
+<button>split33_36</button>
+
+
+
+
+<button>split1_2</button>
+<button>split2_3</button>
+<button>split4_5</button>
+<button>split5_6</button>
+<button>split7_8</button>
+<button>split8_9</button>
+<button>split10_11</button>
+<button>split11_12</button>
+<button>split13_14</button>
+<button>split14_15</button>
+<button>split16_17</button>
+<button>split17_18</button>
+<button>split19_20</button>
+<button>split20_21</button>
+<button>split22_23</button>
+<button>split23_24</button>
+<button>split25_26</button>
+<button>split26_27</button>
+<button>split28_29</button>
+<button>split29_30</button>
+<button>split31_32</button>
+<button>split32_33</button>
+<button>split34_35</button>
+<button>split35_36</button>
 
 </section>
 
@@ -226,6 +231,8 @@
 </section>
 <button id="spin-wheel">PLAY</button>
 </head>
+
+<button id="remove-bet">REMOVE BETS</button>
 <body>
     
 </body>
