--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="css/style.css">
     <h1>Roulette</h1>
 
+    <body>B
 
+<h2>Classic casino game</h2>
+<h3>
+    <p>Pick the right number and you win! <br>
+        First you make your wager, place your <br>bets and play. 
+        But wait, combo bets in crease your odds so,<br> 
+        give them a try. <br>
+        GOOD LUCK;
 
+    </p>
+</h3>
 
 
     <section id="cash-chips">1.  choose a chip
@@ -233,7 +243,7 @@
 </head>
 
 <button id="remove-bet">REMOVE BETS</button>
-<body>
+
     
 </body>
 </html>
