--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <h1>Roulette</h1>
 
-    <body>B
+    <body>
 
 <h2>Classic casino game</h2>
 <h3>
