--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <h3>
     <p>Pick the right number and you win! <br>
         First you make your wager, place your <br>bets and play. 
-        But wait, combo bets in crease your odds so,<br> 
-        give them a try. <br>
+        But wait, combo bets increases your odds, <br> 
+        so give them a try. <br>
         GOOD LUCK;
 
     </p>
