created class black-numbers to showblack wagers

--- a/index.html
+++ b/index.html
@@ -22,30 +22,16 @@
 </h3>
 
 
-    <section id="cash-chips">1.  choose a chip
-    <button>$5</button>
-    <button>$10</button>
-    <button>$15</button>
+   1.  choose a chip
+ 
    
 
-</section>
+
 <section id="bets-to-be-made">
-<section class ="bet" id="odd/even-bets">2.  place a bet odd/even bets
-    <button> odd</button>
-    <button>even</button>
 
-</section>
+ 
 
 
-<section class="high/low-bets">high/ low range
-<button> 1-18</button>
-<button>19-36</button>
-</section>
-
-<section class="color-bets"> color  bets
-    <button>red</button>
-    <button>black</button>
-</section>
 
 
 
@@ -191,54 +177,79 @@
 <button>split31_32</button>
 <button>split32_33</button>
 <button>split34_35</button>
-<button>split35_36</button>
+<button class="test"><!--split35_36--> |</button>
 
 </section>
 
 
 <section class="straight-up">
 <button>1</button>
-<button>2</button>
+<button id="black-numbers">2</button>
 <button>3</button>
-<button>4</button>
+<button id="black-numbers">4</button>
 <button>5</button>
-<button>6</button>
+<button id="black-numbers">6</button>
 <button>7</button>
-<button>8</button>
+<button id="black-numbers">8</button>
 <button>9</button>
-<button>10</button>
-<button>11</button>
+<button id="black-numbers">10</button>
+<button id="black-numbers">11</button>
 <button>12</button>
-<button>13</button>
+<button id="black-numbers">13</button>
 <button>14</button>
-<button>15</button>
+<button id="black-numbers">15</button>
 <button>16</button>
-<button>17</button>
+<button id="black-numbers">17</button>
 <button>18</button>
 <button>19</button>
-<button>20</button>
+<button id="black-numbers">20</button>
 <button>21</button>
-<button>22</button>
+<button id="black-numbers">22</button>
 <button>23</button>
-<button>24</button>
+<button id="black-numbers">24</button>
 <button>25</button>
-<button>26</button>
+<button id="black-numbers">26</button>
 <button>27</button>
-<button>28</button>
-<button>29</button>
+<button id="black-numbers">28</button>
+<buttonid="black-numbers">29</button>
 <button>30</button>
-<button>31</button>
+<button id="black-numbers">31</button>
 <button>32</button>
-<button>33</button>
+<button id="black-numbers">33</button>
 <button>34</button>
-<button>35</button> 
+<button id="black-numbers">35</button> 
 <button>36</button>   
 </section>
+
+
+<section class ="bet" id="odd/even-bets"> 
+    <button> odd</button>
+   <button>even</button>
+
+</section>
+
+<section class="high/low-bets">high/ low range
+    <button> 1-18</button>
+    <button>19-36</button>
+ </section>
+    
+    <section class="color-bets"> color  bets
+        <button>red</button>
+        <button>black</button>
+    </section>
+    
 <!--
 
 
 -->
 </section>
+
+<section id="cash-chips">
+<button>$5</button>
+<button>$10</button>
+<button>$15</button>
+</section>
+
 <button id="spin-wheel">PLAY</button>
 </head>
 
