Created class red-numbers to show red wagers

--- a/index.html
+++ b/index.html
@@ -183,42 +183,43 @@
 
 
 <section class="straight-up">
-<button>1</button>
-<button id="black-numbers">2</button>
-<button>3</button>
-<button id="black-numbers">4</button>
-<button>5</button>
-<button id="black-numbers">6</button>
-<button>7</button>
-<button id="black-numbers">8</button>
-<button>9</button>
-<button id="black-numbers">10</button>
-<button id="black-numbers">11</button>
-<button>12</button>
-<button id="black-numbers">13</button>
-<button>14</button>
-<button id="black-numbers">15</button>
-<button>16</button>
-<button id="black-numbers">17</button>
-<button>18</button>
-<button>19</button>
-<button id="black-numbers">20</button>
-<button>21</button>
-<button id="black-numbers">22</button>
-<button>23</button>
-<button id="black-numbers">24</button>
-<button>25</button>
-<button id="black-numbers">26</button>
-<button>27</button>
-<button id="black-numbers">28</button>
-<buttonid="black-numbers">29</button>
-<button>30</button>
-<button id="black-numbers">31</button>
-<button>32</button>
-<button id="black-numbers">33</button>
-<button>34</button>
-<button id="black-numbers">35</button> 
-<button>36</button>   
+
+<button class="red-numbers">1</button>
+<button class="black-numbers">2</button>
+<button class="red-numbers">3</button>
+<button class="black-numbers">4</button>
+<button class="red-numbers">5</button>
+<button class="black-numbers">6</button>
+<button class="red-numbers">7</button>
+<button class="black-numbers">8</button>
+<button class="red-numbers">9</button>
+<button class="black-numbers">10</button>
+<button class="black-numbers">11</button>
+<button class="red-numbers">12</button>
+<button class="black-numbers">13</button>
+<button class="red-numbers">14</button>
+<button class="black-numbers">15</button>
+<button class="red-numbers">16</button>
+<button class="black-numbers">17</button>
+<button class="red-numbers">18</button>
+<button class="red-numbers">19</button>
+<button class="black-numbers">20</button>
+<button class="red-numbers">21</button>
+<button class="black-numbers">22</button>
+<button class="red-numbers">23</button>
+<button class="black-numbers">24</button>
+<button class="red-numbers">25</button>
+<button class="black-numbers">26</button>
+<button class="red-numbers">27</button>
+<button class="black-numbers">28</button>
+<button class="black-numbers">29</button>
+<button class="red-numbers">30</button>
+<button class="black-numbers">31</button>
+<button class="red-numbers">32</button>
+<button class="black-numbers">33</button>
+<button class="red-numbers">34</button>
+<button class="black-numbers">35</button> 
+<button class="red-numbers">36</button>   
 </section>
 
 
