Implemented a 0 wager button as well as created class zero-btn to show the button

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 
 <section class="straight-up">
-
+    <button class="zero-btn">0</button>
 <button class="red-numbers">1</button>
 <button class="black-numbers">2</button>
 <button class="red-numbers">3</button>
