--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Roulette</title>
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <h1>Roulette</h1>
+    <h1 id="game-title">Roulette</h1>
 
     <body>
 
-<h2>Classic casino game</h2>
+<h2 id="game-description">Classic casino game</h2>
 <h3>
-    <p>Pick the right number and you win! <br>
+    <p id="game-rules">Pick the right number and you win! <br>
         First you make your wager, place your <br>bets and play. 
         But wait, combo bets increases your odds, <br> 
         so give them a try. <br>
